src/pages/Layout.scss
.main-nav {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding-inline: 2rem;

	.main-icon {
		width: 40px;
	}

	.menu-toggle {
		background-color: transparent;
		border: 0;
		width: 48px;
		height: 48px;
		padding: 0;
		position: relative;
		margin-right: -12px;
		z-index: 2;

		.icon {
			position: absolute;
			top: 50%;
			left: 50%;
			transform: translate(-50%, -50%);
			transition: width 0.3s ease-in-out;
			width: 0;

			&.hamburger {
				width: 24px;
			}
		}

		&.active {
			.close {
				width: 21px;
			}

			.hamburger {
				width: 0;
			}
		}
	}

	ul {
		position: fixed;
		background-color: rgba(#0c0e18, 0.95);
		top: 0;
		right: -100%;
		height: 100%;
		z-index: 1;
		width: 67%;
		padding-top: 118px;
		list-style: none;
		transition: right 0.3s ease-in-out;

		&.active {
			right: 0;
		}

		li {
			margin-bottom: 2rem;

			span {
				margin-right: 11px;
				font-weight: 700;
			}

			&:last-of-type {
				margin-bottom: 0;
			}

			a {
				color: var(--clr-p-100);
				text-decoration: none;
				text-transform: uppercase;
				letter-spacing: 2.75px;
				display: block;

				&.active {
					box-shadow: inset -4px 0 0 var(--clr-p-100);
				}
			}
		}
	}
}

@supports (backdrop-filter: blur(1rem)) {
	.main-nav {
		ul {
			background-color: rgba(#fff, 0.1);
			backdrop-filter: blur(2rem);
		}
	}
}

@media (min-width: 768px) {
	.main-nav {
		padding-right: 0;

		.main-icon {
			width: 48px;
		}

		.menu-toggle {
			display: none;
		}

		ul {
			position: relative;
			top: unset;
			right: unset;
			width: unset;
			display: flex;
			justify-content: space-between;
			align-items: center;
			padding: 0 3rem 0 3rem;
			width: clamp(40rem, 50vw, 60rem);
			height: 96px;

			li {
				margin-bottom: 0;

				span {
					display: none;
				}

				a {
					position: relative;

					&::after {
						position: absolute;
						content: "";
						left: 0;
						width: 100%;
						height: 3px;
						background-color: var(--clr-p-100);
						bottom: -33px;
						transform: scale(0);
						animation: bar-out forwards 0.3s ease-in-out;
						opacity: 0.5;
					}

					&:hover {
						&::after {
							animation: bar-in forwards 0.3s ease-in-out;
						}
					}

					@keyframes bar-in {
						from {
							transform: scale(0);
						}
						to {
							transform: scale(1);
						}
					}

					@keyframes bar-out {
						from {
							transform: scale(1);
						}
						to {
							transform: scale(0);
						}
					}

					&.active {
						box-shadow: 0 0 0;

						&::after {
							width: 100%;
							animation: bar-in forwards 0.3s ease-in-out;
							opacity: 1;
						}
					}
				}
			}
		}
	}
}

@media (min-width: 1440px) {
	.main-nav {
		margin-top: 2.5rem;
		position: relative;

		.main-icon-wrapper,
		ul {
			flex-shrink: 0;
		}

		.line {
			width: 100%;
			height: 1px;
			background-color: #fff;
			top: 50%;
			z-index: 2;
			position: relative;
			transform: translateX(3rem);
			opacity: 0.25;
		}

		ul {
			padding-left: 7.6875rem;
			padding-right: 10.3125rem;
			width: clamp(40rem, 80vw, 55rem);

			li {
				a {
					span {
						display: inline;
					}
				}
			}
		}
	}
}

